--- a/style.css
+++ b/style.css
@@ -103,9 +103,13 @@ h1{
 @media screen and (max-width: 600px){
 .menu a{
     font-size: 12px;
+    
 }
 .logo{
     font-size: 12px;
+}
+.menu{
+    width: 90%;
 }
 } 
     
